# webcam

./: .gitignore  .gitmodules  .nospub  .nossign  BuildDriverAndGetInstaller.bat  CMakeLists.txt  FindRegisteredSoftcam.bat  README.md  RegisterSoftcam.bat  UnregisterSoftcam.bat  Webcam.noscfg
.github/workflows/: build.yml  release.yml
Config/: Webcam.fbs  WebcamIn.nosdef  WebcamOut.nosdef  WebcamStream.nosdef  WebcamWriter.nosdef
Plugins/nosWebcam/: .nospub  CMakeLists.txt  Webcam.noscfg
Plugins/nosWebcam/Config/: Webcam.fbs  WebcamIn.nosdef  WebcamReader.nosdef
Plugins/nosWebcam/Shaders/: YUY2toRGBA.comp
Plugins/nosWebcam/Source/: MFCapture.cpp  MFCapture.h  Webcam.cpp  WebcamReader.cpp  WebcamStream.cpp  WebcamStream.h  WebcamStreamNode.cpp
Source/: Webcam.cpp  WebcamOut.cpp  WebcamReader.cpp  WebcamStream.cpp  WebcamStream.h  WebcamStreamNode.cpp
